--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <meta name="description" content="欢迎来到overseastu">
     <meta name="keywords" content="留学生，留学生生活，留学生服务，海外，出国">
     <link rel="stylesheet" href="css/style.css">
-    <title>米修在线|首页</title>
+    <link rel="stylesheet" href="css/font-awesome.css">
+    <title>overseastu|介绍页</title>
 </head>
 <body>
     <header>
         <nav id="navbar">
             <div class="container">
-                <h1><a href="index.html">米修在线</a></h1>
+                <h1><a href="index.html">overseastu</a></h1>
                 <ul>
                     <li><a class="current" href="index.html">首页</a></li>
                     <li><a href="about.html">关于我们</a></li>
@@ -25,14 +26,56 @@
         <div id="showcase">
             <div class="container">
                 <div class="showcase-content">
-                    <h1>欢迎来到米修在线</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium rerum cum ea illum voluptate.
-                         Quis autem deserunt ea aut ullam eos, quod, iste sint animi facilis natus accusantium? Ut, laborum!
+                    <h1>欢迎来到<span class="text-primary">overseastu</span></h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Laudantium rerum cum ea illum voluptate.
+                         Quis autem deserunt ea aut ullam eos, quod, 
+                         iste sint animi facilis natus accusantium? Ut, laborum!
                     </p>
-                    <a href="about.html">关于我们</a>
+                    <a class="btn" href="about.html">关于我们</a>
                 </div>
             </div>
         </div>
     </header>
+    <section id="home-info" class="bg-bright">
+        <div class="info-img"></div>
+        <div class="info-content">
+            <h2><span class="text-primary">overseastu</span>介绍</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                Porro cumque ullam odit sunt aspernatur totam animi libero rem,
+                 amet sint magnam eius ducimus et hic vitae nisi sit voluptas pariatur?</p>
+                 <a href="about.html" class="btn btn-light">阅读更多</a>
+        </div>
+    </section>
+    <section id="features">
+        <div class="box bg-light"> 
+            <i class="fa fa-users fa-3x" aria-hidden="true"></i>
+            <h3>用户分布</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                Nobis maiores blanditiis dolorem, commodi similique alias repellat,
+                 reiciendis repellendus accusamus quasi sit ex quod illum.
+                  Labore quam laudantium enim fugiat asperiores.</p>
+        </div>
+        <div class="box bg-coral"> 
+            <i class="fa fa-graduation-cap fa-3x" aria-hidden="true"></i>
+            <h3>组织生态</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                Nobis maiores blanditiis dolorem, commodi similique alias repellat,
+                 reiciendis repellendus accusamus quasi sit ex quod illum.
+                  Labore quam laudantium enim fugiat asperiores.</p>
+        </div>
+        <div class="box bg-light"> 
+            <i class="fa fa-briefcase fa-3x" aria-hidden="true"></i>
+            <h3>供应机构</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                Nobis maiores blanditiis dolorem, commodi similique alias repellat,
+                 reiciendis repellendus accusamus quasi sit ex quod illum.
+                  Labore quam laudantium enim fugiat asperiores.</p>
+        </div>
+    </section>
+    <div class="clr"></div>
+    <footer id="main-footer">
+        <p>overseastu &copy; 2021,All Right Reserved</p>
+    </footer>
 </body>
 </html>
